--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
       "webRoot": "${workspaceFolder}",
       "runtimeExecutable": "/snap/bin/chromium",
       "runtimeArgs": [
+        "--new-window",
         "-user-data-dir=\"/${workspaceFolder}/DevProfile\"",
         "--remote-debugging-port=9222"
         //     "--disable-background-networking"
