--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.7
 autopep8==1.5.2
 Django==3.0.6
+django-cors-headers==3.3.0
 django-filter==2.2.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
